<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="inputFormula"
            type="String" />
        <variable
            name="calcPrediction"
            type="String" />
        <variable
            name="activity"
            type="kitakkun.calculator.MainActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom|end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_calc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:padding="10dp"
                android:text="@{inputFormula}"
                android:textSize="70sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_prediction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="bottom"
                android:padding="10dp"
                android:text="@{calcPrediction}"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:onClick="@{() -> activity.onClearBtnClicked()}"
                    android:text="@string/ac"
                    android:textSize="30sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/btnBracket"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:onClick="@{() -> activity.onBracketBtnClicked()}"
                    android:text="@string/brackets"
                    android:textSize="30sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/btnPercent"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:onClick="@{view -> activity.onOperatorBtnClicked(view)}"
                    android:text="@string/percent"
                    android:textSize="30sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/btnDivide"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:onClick="@{view -> activity.onOperatorBtnClicked(view)}"
                    android:text="@string/divide"
                    android:textSize="30sp"
                    app:cornerRadius="25dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnSeven"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:onClick="@{view -> activity.onDigitBtnClicked(view)}"
                    android:text="@string/seven"
                    android:textSize="30sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/btnEight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:onClick="@{view -> activity.onDigitBtnClicked(view)}"
                    android:text="@string/eight"
                    android:textSize="30sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/btnNine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:onClick="@{view -> activity.onDigitBtnClicked(view)}"
                    android:text="@string/nine"
                    android:textSize="30sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/btnMultiply"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:onClick="@{view -> activity.onOperatorBtnClicked(view)}"
                    android:text="@string/multiply"
                    android:textSize="30sp"
                    app:cornerRadius="25dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnFour"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:onClick="@{view -> activity.onDigitBtnClicked(view)}"
                    android:text="@string/four"
                    android:textSize="30sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/btnFive"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:onClick="@{view -> activity.onDigitBtnClicked(view)}"
                    android:text="@string/five"
                    android:textSize="30sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/btnSix"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:onClick="@{view -> activity.onDigitBtnClicked(view)}"
                    android:text="@string/six"
                    android:textSize="30sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/btnMinus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:onClick="@{view -> activity.onOperatorBtnClicked(view)}"
                    android:text="@string/minus"
                    android:textSize="30sp"
                    app:cornerRadius="25dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnOne"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:onClick="@{view -> activity.onDigitBtnClicked(view)}"
                    android:text="@string/one"
                    android:textSize="30sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/btnTwo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:onClick="@{view -> activity.onDigitBtnClicked(view)}"
                    android:text="@string/two"
                    android:textSize="30sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/btnThree"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:onClick="@{view -> activity.onDigitBtnClicked(view)}"
                    android:text="@string/three"
                    android:textSize="30sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/btnPlus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:onClick="@{view -> activity.onOperatorBtnClicked(view)}"
                    android:text="@string/plus"
                    android:textSize="30sp"
                    app:cornerRadius="25dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnZero"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:onClick="@{view -> activity.onDigitBtnClicked(view)}"
                    android:text="@string/zero"
                    android:textSize="30sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/btnDot"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:onClick="@{() -> activity.onDotBtnClicked()}"
                    android:text="@string/dot"
                    android:textSize="30sp"
                    app:cornerRadius="25dp" />

                <Button
                    android:id="@+id/btnBackSpace"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:onClick="@{() -> activity.onBackSpaceBtnClicked()}"
                    android:text="@string/backspace"
                    android:textSize="0sp"
                    app:cornerRadius="25dp"
                    app:icon="@android:drawable/ic_input_delete"
                    app:iconGravity="textStart"
                    app:iconPadding="0dp" />

                <Button
                    android:id="@+id/btnEquals"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:onClick="@{() -> activity.onEqualBtnClicked()}"
                    android:text="@string/equals"
                    android:textSize="30sp"
                    app:cornerRadius="25dp" />
            </TableRow>
        </TableLayout>

    </LinearLayout>
</layout>